# myqt

./: CMakeLists.txt  main.cpp
